[package]
name = "suricata-lua-sys"
description = "Vendored Lua for Suricata"
edition = "2021"
rust-version = "1.56.0"
license = "MIT"

# For versioning we use a schema that lets us to patch releases on Lua
# patch releases.  For example:
#    5.4.8 -> 5.4.8000
# Then if we need to make a patch we can release 5.4.8001.
version = "5.4.8001"

[build-dependencies]
fs_extra = "1.3.0"
